# corex

./: .gitignore  Cargo.toml  README.md  config.json  corex-configure.json  corex.config.yaml  findings.md  fluxor.manifest  fluxor.task.json  pipelines.yaml  progress.md  skills-lock.json  task_plan.md  to.txt
.agents/skills/corex-add-module/evals/: evals.json
.agents/skills/corex-add-module/references/: checklist.md  templates.md
.cargo/: config.toml
.cursor/plans/: corex_tauri_集成优化_29ee6465.plan.md  流式_pipeline_重构_15753efe.plan.md
.cursor/skills/corex-add-module/: SKILL.md
.github/prompts/: plan-rustCliH5PlusDeploy.prompt.md
.github/workflows/: build-and-test.yml  ci.yaml  ci.yml  publish-release.yml  release.yaml  release.yml  rust.yml
assets/pdfium/: pdfium-win-x64.tgz.sha256
cache/: process_copy.txt
cache/output/: 1.json
corex/: Cargo.toml
corex-capture/: Cargo.toml
corex-capture/src/: main.rs
corex-core/: Cargo.toml
corex-core/examples/: ipc.rs
corex-core/src/: lib.rs
corex-core/src/bootstrap/: schema.rs  service.rs
corex-core/src/cli/: mod.rs
corex-core/src/codec/: parse.rs  schema.rs  service.rs
corex-core/src/command/: mod.rs
corex-core/src/compression/: mod.rs  parse.rs  schema.rs  service.rs  tests.rs
corex-core/src/compression/formats/: collect.rs  mod.rs  seven_z.rs  tar_gz.rs  zip.rs
corex-core/src/copy/: parse.rs  schema.rs  service.rs
corex-core/src/exec/: parse.rs  schema.rs  service.rs
corex-core/src/generate/: mod.rs  parse.rs  schema.rs  service.rs  template.rs
corex-core/src/invoke/: artifact.rs  assemble.rs  context.rs  mod.rs  registry.rs  result.rs  wire.rs
corex-core/src/morph/: mod.rs  parse.rs  pdfium.rs  schema.rs  search.rs  service.rs
corex-core/src/pipeline/: config.rs  context.rs  graph.rs  guard.rs  mod.rs  orchestrator.rs  report.rs  runner.rs  step_params.rs  trigger.rs
corex-core/src/pipeline/stream/: batch.rs  item.rs  mod.rs  path_stream.rs  traits.rs
corex-core/src/runtime/: emit.rs  exit.rs  mod.rs  opts.rs  settings.rs  trace.rs
corex-core/src/scan/: schema.rs  service.rs
corex-core/src/schedule/: mod.rs  schema.rs  service.rs
corex-core/src/screenshot/: mod.rs  parse.rs  schema.rs  service.rs
corex-core/src/scrub/: parse.rs  service.rs
corex-core/src/serve/: dispatch.rs  mod.rs  protocol.rs  state.rs
corex-core/src/serve/pipe/: mod.rs  windows.rs
corex-core/src/shade/: parse.rs  schema.rs  service.rs
corex-core/src/tasks/: mod.rs
corex-core/src/utils/: filter.rs  ignore.rs  mod.rs  paths.rs  verifier.rs
corex-core/src/watch/: mod.rs  schema.rs  service.rs
corex-core/tests/: exec_smoke.rs  invoke_modules.rs  invoke_parse.rs  notify_flood_probe.rs  orchestrator_exec.rs  orchestrator_failed.rs  orchestrator_parallel.rs  path_stream.rs  pipeline_v3.rs  watch_smoke.rs
corex-serve/: Cargo.toml  build.rs
corex-serve/src/: main.rs
corex-shot/: Cargo.toml
corex-shot/src/: main.rs
corex/src/: main.rs
corex/tests/: cli_contract.rs  pdfium_bundle.rs
docs/: architecture-and-tauri-integration.md  architecture.md  breaking-changes.md  corex.task.example.json  corex.task.json  corex.task.schema.README.md  corex.task.schema.json  cron.md  ipc-protocol.md  path.txt  pipeline-v3.md  runtime.md  tauri-integration.md  v3-migration.md  worktree.md
examples/: NOTIFICATION_README.md  comprehensive_notification_test.rs  final_notification_test.rs  legacy_notification.rs  legacy_notification_test.rs  notification copy.rs  notification.rs  notification_config.json  notification_diagnostic.rs  notification_examples.rs  notification_test.rs  ultimate_notification_test.rs
examples/command/: copy.rs  mod.rs
examples/process/: generate.rs  mod.rs
examples/tauri/: Cargo.toml.snippet  README.md  corex_ipc.rs  lib.rs  tauri.conf.json
examples/tauri/capabilities/: default.json
examples/tauri/scripts/: copy-corex-serve.mjs
examples/templates/: notification_advanced.xml  notification_basic.xml  notification_task_complete.xml
noused-file/: build.bat  deploy.bat  install.bat  manifest.json  start.js  version.json
scripts/: bootstrap.ps1  download-pdfium.ps1
src/: fs.rs  lib.rs  main.rs  notification_example.rs
src/bootstrap/: controller.rs  service.rs
src/cleanup/: service.rs
src/cli/: mod.rs
src/command/: copy.rs  mod.rs
src/compression/: controller.rs  schema.rs  service.rs
src/copy/: controller.rs  schema.rs  service.rs
src/generate/: controller.rs  schema.rs  service.rs
src/morph/: schema.rs
src/process/: copy.rs  mod.rs
src/remove/: service.rs
src/schedule/: controller.rs  pipeline.rs  schema.rs  service.rs
src/screenshot/: service.rs
src/scrub/: controller.rs  schema.rs  service.rs
src/setup/: controller.rs  service.rs
src/shade/: schema.rs
src/task/: controller.rs  service.rs
src/utils/: error.rs  exception.rs  file.rs  ignore.rs  notification.rs  notify.rs  progress.rs  scan.rs  verifier.rs
