[package]
name        = "corex"
version     = "0.2.3"
edition     = "2024"
description = "corex-cli"
authors     = ["layen"]

[profile.release]
# opt-level = 3       # 最高优化级别
opt-level = 2    # 降低优化级别 (从 3 改为 2)
lto       = true # 链接时优化（平衡大小与速度）
# lto = "thin"        # 使用轻量级 LTO (从 true 改为 "thin")
codegen-units = 1 # 单线程代码生成（提升优化）
# codegen-units = 16  # 增加代码生成单元 (从 1 改为 16)
incremental = false     # 禁用增量编译（避免优化冲突）
panic       = "abort"   # 替换展开为直接终止（减小体积）
strip       = "symbols" # 移除调试符号（Rust 1.59+）
# strip = true        # Rust 1.59+ 原生支持
# strip = "debuginfo" # 只移除调试信息，保留符号表

[lib]
name       = "core"
path       = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[[bin]]
name = "corex"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0.98"
clap        = { version = "4.5.54", features = ["derive"] }
config      = "0.15.19"
crossterm   = "0.29.0"
dialoguer   = "0.12.0"
dirs        = "6.0.0"
glob        = "0.3.2"
indicatif   = "0.18.3"
notify-rust = "4.11.7"
regex       = "1.11.1"
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.149"
sysinfo     = "0.37.2"
thiserror   = "2.0.17"
tokio       = { version = "1.49.0", features = ["full"] }
walkdir     = "2.5.0"

[dev-dependencies]
tempfile = "3.24.0"

[dependencies.windows]
version = "0.62.2"
features = [
  "Data_Xml_Dom",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Foundation",
  "Win32_System_Services",
  "UI_Notifications",
  "UI_Notifications_Management",
  "Foundation",
]
