[workspace]
members = ["corex", "corex-core"]
resolver = "2"

[workspace.package]
version     = "0.3.0"
edition     = "2024"
description = "corex-cli"
authors     = ["layen"]

[workspace.dependencies]
anyhow        = "1.0.102"
chrono        = { version = "0.4.45", features = ["serde"] }
clap          = { version = "4.6.1", features = ["derive"] }
cron          = "0.15.0"
crossterm     = "0.29.0"
dialoguer     = "0.12.0"
dirs          = "6.0.0"
glob          = "0.3.2"
indicatif     = "0.18.4"
notify-rust   = "4.17.0"
regex         = "1.12.3"
serde         = { version = "1.0.219", features = ["derive"] }
serde_json    = "1.0.150"
serde_yml     = "0.0.13"
tokio         = { version = "1.49.0", features = ["full"] }
uuid          = { version = "1.23.2", features = ["v4"] }
walkdir       = "2.5.0"
zip           = "8.6.0"
image         = "0.25.10"
xcap          = "0.9.6"

[profile.release]
opt-level     = 2
lto           = true
codegen-units = 1
incremental   = false
panic         = "abort"
strip         = "symbols"
