[package]
name              = "corex-capture"
version.workspace = true
edition.workspace = true
description       = "Corex minimal screenshot capture binary"
authors.workspace = true

[[bin]]
name = "corex-capture"
path = "src/main.rs"

[dependencies]
corex-core = { path = "../corex-core", default-features = false, features = ["screenshot"] }
anyhow     = { workspace = true }
clap       = { workspace = true }
