[package]
name              = "corex-core"
version.workspace = true
edition.workspace = true
description       = "Corex core library"
authors.workspace = true

[lib]
name       = "corex_core"
path       = "src/lib.rs"
crate-type = ["rlib"]
doctest    = false

[dependencies]
anyhow      = { workspace = true }
chrono      = { workspace = true }
clap        = { workspace = true }
cron        = { workspace = true }
crossterm   = { workspace = true }
dialoguer   = { workspace = true }
dirs        = { workspace = true }
glob        = { workspace = true }
indicatif   = { workspace = true }
notify-rust = { workspace = true }
regex       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yml   = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
walkdir     = { workspace = true }
zip         = { workspace = true }
image       = { workspace = true }
xcap        = { workspace = true }
handlebars  = { workspace = true }
rand        = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"

[dependencies.windows]
version = "0.62.2"
features = [
  "Data_Xml_Dom",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Foundation",
  "Win32_System_Services",
  "UI_Notifications",
  "UI_Notifications_Management",
  "Foundation",
]
