[package]
name              = "corex-shot"
version.workspace = true
edition.workspace = true
description       = "Corex minimal screenshot binary"
authors.workspace = true

[[bin]]
name = "corex-shot"
path = "src/main.rs"

[dependencies]
corex-core = { path = "../corex-core", default-features = false, features = ["screenshot"] }
anyhow     = { workspace = true }
clap       = { workspace = true }
