[package]
name              = "corex"
version.workspace = true
edition.workspace = true
description       = "Corex CLI binary"
authors.workspace = true
build             = "build.rs"

[[bin]]
name = "corex"
path = "src/main.rs"

[dependencies]
corex-core = { path = "../corex-core", features = ["all"] }
anyhow     = { workspace = true }
clap       = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }

[[test]]
name = "cli_contract"
path = "tests/cli_contract.rs"

[[test]]
name = "pdfium_bundle"
path = "tests/pdfium_bundle.rs"
